fix:雨量的返回数据进行特殊处理